Insert Author to DataScienceEcosystem.ipynb

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad967cc7-2104-4f67-8a1d-198a698259f6",
+   "metadata": {},
+   "source": [
+    "## Author\n",
+    "Lucas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00d74929-7d37-4312-93dc-288e244bf37b",
    "metadata": {},
    "source": [
