--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -5,7 +5,14 @@
    "id": "ea36bc4f-6398-46b0-b6a0-22c991a00590",
    "metadata": {},
    "source": [
-    "#  Data Science Tools and Ecosystem\n",
+    "#  Data Science Tools and Ecosystem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f908fe-eda8-4361-bd69-42b42b140ebe",
+   "metadata": {},
+   "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
